Improve HTML Efficiency
Use 1 DIV instead of two.

--- a/app/assets/javascripts/templates/user/followers.hbs
+++ b/app/assets/javascripts/templates/user/followers.hbs
@@ -3,9 +3,7 @@
     <div class="follow-panel-wrapper">
       <div class="follow-panel">
         {{#link-to 'user' username}}
-          <div class="user-cover">
-            <div class="cover-photo" {{bind-attr style=coverImageStyle}}></div>
-          </div>
+          <div class="mini-cover" {{bind-attr style=coverImageStyle}}></div>
         {{/link-to}}
         <div class="user-avatar">
           <a {{bind-attr href=userLink}}>
