Improve HTML Efficiency
More suitable class name

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -657,7 +657,7 @@ html { overflow-y: auto; }
     }
   }
 
-  .mini-cover {
+  .follow-cover {
       @extend .user-cover;
       @extend .cover-photo;
     }
