--- a/app/assets/javascripts/templates/user/followers.hbs
+++ b/app/assets/javascripts/templates/user/followers.hbs
@@ -3,7 +3,7 @@
     <div class="follow-panel-wrapper">
       <div class="follow-panel">
         {{#link-to 'user' username}}
-          <div class="mini-cover" {{bind-attr style=coverImageStyle}}></div>
+          <div class="follow-cover" {{bind-attr style=coverImageStyle}}></div>
         {{/link-to}}
         <div class="user-avatar">
           <a {{bind-attr href=userLink}}>
