--- a/app/assets/javascripts/templates/header.hbs
+++ b/app/assets/javascripts/templates/header.hbs
@@ -43,13 +43,7 @@
       </li>
 
       <li class='dropdown'>
-        <a class='dropdown-toggle' data-toggle='dropdown'>
-          Community <b class='caret'></b>
-        </a>
-        <ul class='dropdown-menu left-nav-section'>
-          <li><a href="https://forums.hummingbird.me">Forums</a></li>
-          <li>{{#link-to 'chat'}}Chat{{/link-to}}</li>
-        </ul>
+        <a href="https://forums.hummingbird.me">Community</a>
       </li>
       <li class='dropdown'>
         {{#link-to 'apps'}}Apps{{/link-to}}
