Onboarding steps 1-4 ready to be hooked up

--- a/app/assets/javascripts/templates/header.hbs
+++ b/app/assets/javascripts/templates/header.hbs
@@ -9,7 +9,7 @@
         <i class='fa fa-bars'></i>
       </a>
 
-      <a class='navbar-brand' {{action 'goToDashboard'}} href='/dashboard'></a>
+      <a class='navbar-brand animated fadeInDown' {{action 'goToDashboard'}} href='/dashboard'></a>
     </div>
 
     <ul {{bind-attr class=':nav :navbar-nav :collapse :navbar-collapse showMenu:navbar-visible'}}>
