--- a/app/assets/javascripts/templates/onboarding/rating-system.hbs
+++ b/app/assets/javascripts/templates/onboarding/rating-system.hbs
@@ -1,20 +1,28 @@
-<div class="row">
-  <div class="col-xs-9">
+<div class="panel-header">
+  <div class="step-instructions col-sm-7">
     <h3>Which rating system do you want to use?</h3>
     <p>This is how others see how much you enjoy what you're tracking. You can change this later!</p>
   </div>
-  <div class="col-xs-3" style='padding: 40px'>
-    {{#link-to 'onboarding.categories' class='btn btn-primary'}}Continue{{/link-to}}
+  <div class="next-step col-sm-5">
+    {{#link-to 'onboarding.categories' class='btn btn-primary continue-button rating-system'}}Continue{{/link-to}}
+    {{!-- {{#link-to 'onboarding.categories' class='btn btn-primary continue-button no-continue'}}Select Rating System{{/link-to}} --}}
   </div>
 </div>
 
-<div class="row" style='text-align: center; margin-top: 20px; border-top: 1px solid #ddd; padding: 25px 0 10px'>
+<div class="rating-wrapper">
   <div class='col-xs-12'>
-    <button {{bind-attr class=":btn simpleRating:btn-primary"}} {{action "setRatingType" "simple"}}>Simple</button>
-    or
-    <button {{bind-attr class=":btn advancedRating:btn-primary"}} {{action "setRatingType" "advanced"}}>Advanced</button>
-    {{#if saving}}
-      Saving...
-    {{/if}}
+    <button {{bind-attr class=":simple-rating simpleRating:active"}} {{action "setRatingType" "simple"}}>
+      <i class="fa fa-smile-o"></i>
+      <i class="fa fa-smile-o"></i>
+      <i class="fa fa-smile-o"></i>
+    </button>
+    <span class="rating-divider">or</span>
+    <button {{bind-attr class=":advanced-rating advancedRating:active"}} {{action "setRatingType" "advanced"}}>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star-half-o"></i>
+    </button>
   </div>
 </div>
