--- a/app/assets/javascripts/templates/onboarding/start.hbs
+++ b/app/assets/javascripts/templates/onboarding/start.hbs
@@ -1,15 +1,18 @@
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-sm-5 no-padding-right" style="padding-left: 35px; margin-top: 20px;">
     <h3>You've made a great decision.</h3>
 
-    <p>Hummingbird is a social network for sharing your taste in anime and manga. See what your friends have been enjoying, track what you've seen or read and get personalized recommendations.</p>
+    <p style="margin-bottom: 25px;">Hummingbird is a social network for sharing your taste in anime and manga. See what your friends have been enjoying, track what you've seen or read and get personalized recommendations.</p>
 
     <p>Let's take a few moments to personalize your account, you beautiful bastard.</p>
 
-    <p style='margin-top: 20px'>{{#link-to 'onboarding.rating-system' class='btn btn-primary'}}Continue{{/link-to}}</p>
+    <p style='margin-top: 20px'>{{#link-to 'onboarding.rating-system' class='btn btn-primary continue-button small-continue'}}Get Started{{/link-to}}</p>
   </div>
 
-  <div class="col-xs-6">
-    <img src="http://i.imgur.com/Em9Mus5.png" style="width: 100%">
+  <div class="col-sm-7">
+    <div class="moe-wrapper">
+      <img src="../onboarding-moe.png" class="onboarding-moe">
+      <img src="../onboarding-moe-bg.png" class="onboarding-moe-bg">
+    </div>
   </div>
 </div>
