Remove inline style, add rating save feedback.

--- a/app/assets/javascripts/templates/onboarding.hbs
+++ b/app/assets/javascripts/templates/onboarding.hbs
@@ -1,12 +1,8 @@
-<style>
-  .hb-nav {display: none;}
-</style>
-
 <nav class="navbar navbar-inverse navbar-fixed-top hb-nav onboarding-nav" role="navigation">
   <div class="container clearfix">
     <div class="navbar-header">
-      <a class="navbar-brand" data-ember-action="862" href="#"></a>
-    </div> 
+      <a class="navbar-brand" style="cursor: default"></a>
+    </div>
     <div class="nav-steps">
       <h5>Step 3 of 5</h5>
     </div>
