--- a/app/assets/javascripts/templates/onboarding/rating-system.hbs
+++ b/app/assets/javascripts/templates/onboarding/rating-system.hbs
@@ -11,13 +11,13 @@
 
 <div class="rating-wrapper">
   <div class='col-xs-12'>
-    <button {{bind-attr class=":simple-rating simpleRating:active"}} {{action "setRatingType" "simple"}}>
+    <button {{bind-attr class=":simple-rating simpleRating:active saving"}} {{action "setRatingType" "simple"}}>
       <i class="fa fa-smile-o"></i>
       <i class="fa fa-smile-o"></i>
       <i class="fa fa-smile-o"></i>
     </button>
     <span class="rating-divider">or</span>
-    <button {{bind-attr class=":advanced-rating advancedRating:active"}} {{action "setRatingType" "advanced"}}>
+    <button {{bind-attr class=":advanced-rating advancedRating:active saving"}} {{action "setRatingType" "advanced"}}>
       <i class="fa fa-star"></i>
       <i class="fa fa-star"></i>
       <i class="fa fa-star"></i>
