Hook up favorite category selection in onboarding.

--- a/app/assets/javascripts/templates/onboarding/categories.hbs
+++ b/app/assets/javascripts/templates/onboarding/categories.hbs
@@ -1,48 +1,29 @@
 <div class="panel-header">
   <div class="step-instructions col-sm-7">
     <h3>What categories are you interested in?</h3>
-    <p>We'll use your favorite categories to improve the recommendations we calculate for you.</p>
+    <p>We will use your favorite categories to improve the recommendations we calculate for you.</p>
   </div>
   <div class="next-step col-sm-5">
-    {{#link-to 'onboarding.library' class='btn btn-primary continue-button categories'}}Continue{{/link-to}}
-    {{!-- {{#link-to 'onboarding.categories' class='btn btn-primary continue-button no-continue'}}Select <strong>2 more</strong>{{/link-to}} --}}
+    {{#if canContinue}}
+      {{#link-to 'onboarding.library' class='btn btn-primary continue-button categories'}}Continue{{/link-to}}
+    {{else}}
+      <a class='btn btn-primary continue-button no-continue'>
+        Select <strong>{{remainingFavorites}} more</strong>
+      </a>
+    {{/if}}
   </div>
 </div>
 
 <div class="genre-panel-wrapper">
-  <div class="col-sm-3 genre-panel">
-    <div class="genre">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
-  <div class="col-sm-3 genre-panel">
-    <div class="genre active">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
-  <div class="col-sm-3 genre-panel">
-    <div class="genre">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
-  <div class="col-sm-3 genre-panel">
-    <div class="genre">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
-  <div class="col-sm-3 genre-panel">
-    <div class="genre">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
-  <div class="col-sm-3 genre-panel">
-    <div class="genre ">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
-  <div class="col-sm-3 genre-panel">
-    <div class="genre">
-      <span>Anime Influenced</span>
-    </div>
-  </div>
+  {{#if loading}}
+    {{loading-indicator}}
+  {{else}}
+    {{#each genres}}
+      <div class="col-sm-3 genre-panel">
+        <div {{bind-attr class=":genre favorite:active"}} {{action "toggleFavorite" this}}>
+          <span>{{model.name}}</span>
+        </div>
+      </div>
+    {{/each}}
+  {{/if}}
 </div>
