Improve Edit Overlay for user page

--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -7,7 +7,7 @@
         </label>
         <div class="container">
           <p>
-            Hummingbird is fully responsive and will stretch and shrink based on the width of the device that you are viewing. <br> On smaller devices and window sizes, your cover image will be cut off equally on the left and right side depending on the size of the screen.
+            Cover images expand and shrink based on your device's width. <br>On smaller devices your cover will be cut off equally on both sides.
           </p>
         </div>
         {{view "fileUpload" action="coverSelected"
