Fixed continue link

--- a/app/assets/javascripts/templates/onboarding/library.hbs
+++ b/app/assets/javascripts/templates/onboarding/library.hbs
@@ -4,7 +4,7 @@
     <p>Hummingbird learns from your ratings to improve your recommendations.</p>
   </div>
   {{#if canContinue}}
-    {{#link-to 'onboarding.library' class='btn btn-primary continue-button categories'}}Continue{{/link-to}}
+    {{#link-to 'onboarding.finish' class='btn btn-primary continue-button categories'}}Continue{{/link-to}}
   {{else}}
     <a class='btn btn-primary continue-button no-continue'>
       Rate <strong>{{remainingRatings}} more</strong> to continue</strong>
