--- a/app/assets/javascripts/templates/onboarding/library.hbs
+++ b/app/assets/javascripts/templates/onboarding/library.hbs
@@ -31,36 +31,40 @@
 </div>
 
 <ul class="library-thumbs">
-  {{#if showManga}}
-    {{#each mangaData}}
-      <li class="block-grid-item">
-        <div class="thumbnail">
-          <img {{bind-attr src=posterImage}} />
-        </div>
-        <span class="library-title">{{englishTitle}}</span>
-        <div class="awesome-rating-widget">
-          <h5 class="sidebar-title text-center">Your Rating</h5>
-          {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=libraryEntry.rating}}
-        </div>
-      </li>
-    {{else}}
-      No search results ...
-    {{/each}}
+  {{#if loading}}
+    {{loading-indicator}}
   {{else}}
-    {{#each animeData}}
-      <li class="block-grid-item">
-        <div class="thumbnail">
-          <img {{bind-attr src=posterImage}} />
-        </div>
-        <span class="library-title">{{canonicalTitle}}</span>
-        <div class="awesome-rating-widget">
-          <h5 class="sidebar-title text-center">Your Rating</h5>
-          {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=libraryEntry.rating}}
-        </div>
-      </li>
+    {{#if showManga}}
+      {{#each mangaData}}
+        <li class="block-grid-item">
+          <div class="thumbnail">
+            <img {{bind-attr src=posterImage}} />
+          </div>
+          <span class="library-title">{{englishTitle}}</span>
+          <div class="awesome-rating-widget">
+            <h5 class="sidebar-title text-center">Your Rating</h5>
+            {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=libraryEntry.rating}}
+          </div>
+        </li>
+      {{else}}
+        No search results ...
+      {{/each}}
     {{else}}
-      No search results ...
-    {{/each}}
+      {{#each animeData}}
+        <li class="block-grid-item">
+          <div class="thumbnail">
+            <img {{bind-attr src=posterImage}} />
+          </div>
+          <span class="library-title">{{canonicalTitle}}</span>
+          <div class="awesome-rating-widget">
+            <h5 class="sidebar-title text-center">Your Rating</h5>
+            {{awesome-rating type=currentUser.ratingType editable="true" action="setLibraryRating" rating=libraryEntry.rating}}
+          </div>
+        </li>
+      {{else}}
+        No search results ...
+      {{/each}}
+    {{/if}}
   {{/if}}
 </ul>
 
