renamed 'pending' route to 'edits', fixups based on @vikhyat's feedback

--- a/app/assets/javascripts/templates/edits/index.hbs
+++ b/app/assets/javascripts/templates/edits/index.hbs
@@ -32,7 +32,7 @@
                   </td>
                   <td>{{createdAt}}</td>
                   <td>
-                    {{#link-to 'pending.show' id}}
+                    {{#link-to 'edits.show' id}}
                       <i class="fa fa-list"></i> View
                     {{/link-to}}
                   </td>
