--- a/app/assets/javascripts/templates/kotodama.hbs
+++ b/app/assets/javascripts/templates/kotodama.hbs
@@ -12,7 +12,7 @@
             <li><a class="btn" href="/kotodama/sidekiq">Sidekiq Dashboard</a></li>
             <li><a class="btn" href="/kotodama/pghero">PG Hero</a></li>
             <li>
-              {{#link-to 'pending' class="btn"}}
+              {{#link-to 'edits' class="btn"}}
                 {{pluralize pending_count "Pending Edit" "Pending Edits"}}
               {{/link-to}}
             </li>
