Hook up onboarding step indicator

--- a/app/assets/javascripts/templates/onboarding.hbs
+++ b/app/assets/javascripts/templates/onboarding.hbs
@@ -4,7 +4,7 @@
       <a class="navbar-brand" style="cursor: default"></a>
     </div>
     <div class="nav-steps">
-      <h5>Step 3 of 5</h5>
+      <h5>Step {{currentStep}} of 5</h5>
     </div>
   </div>
 </nav>
