--- a/app/assets/javascripts/templates/onboarding/finish.hbs
+++ b/app/assets/javascripts/templates/onboarding/finish.hbs
@@ -4,8 +4,7 @@
     <p>Follow users to stay up-to-date on everything they're watching, reading and doing.</p>
   </div>
   <div class="next-step col-sm-5">
-    {{#link-to 'onboarding.categories' class='btn btn-primary continue-button finish'}}Finish Account Setup{{/link-to}}
-    {{!-- {{#link-to 'onboarding.categories' class='btn btn-primary continue-button no-continue'}}Select Rating System{{/link-to}} --}}
+    {{#link-to 'user.index' currentUser.id class='btn btn-primary continue-button finish'}}Finish Account Setup{{/link-to}}
   </div>
 </div>
 
