Fix onboarding.finish redirect button

--- a/app/assets/javascripts/templates/onboarding/finish.hbs
+++ b/app/assets/javascripts/templates/onboarding/finish.hbs
@@ -4,7 +4,7 @@
     <p>Follow users to stay up-to-date on everything they're watching, reading and doing.</p>
   </div>
   <div class="next-step col-sm-5">
-    {{#link-to 'user.index' currentUser.id class='btn btn-primary continue-button finish'}}Finish Account Setup{{/link-to}}
+    {{#link-to 'user.index' currentUser class='btn btn-primary continue-button finish'}}Finish Account Setup{{/link-to}}
   </div>
 </div>
 
