--- a/app/assets/javascripts/templates/anime/_full_header.hbs
+++ b/app/assets/javascripts/templates/anime/_full_header.hbs
@@ -22,7 +22,7 @@
   </h2>
   <div class="series-infobar">{{partial "anime/infobar"}}</div>
   <div class="synopsis">
-    <p>{{truncate-text text=synopsis length=500}}</p>
+    <p>{{{truncate-text text=synopsis length=500 breakLines=true}}}</p>
   </div>
 
   {{partial "anime/info_tabs"}}
